--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
   <h1 id="title">Drum 🥁 Kit</h1>
   <div class="set">
-    <button class="w drum">w</button>
-    <button class="a drum">a</button>
-    <button class="s drum">s</button>
-    <button class="d drum">d</button>
-    <button class="j drum">j</button>
-    <button class="k drum">k</button>
-    <button class="l drum">l</button>
+    <button class=" drum">w</button>
+    <button class=" drum">a</button>
+    <button class=" drum">s</button>
+    <button class=" drum">d</button>
+    <button class=" drum">j</button>
+    <button class=" drum">k</button>
+    <button class=" drum">l</button>
   </div>
 
 
